# Langchain-genai

./: .gitignore  config.py  custom_tool.py  news_summarizer.py  parallel_runnable.py  passthrough_runnable.py  pyproject.toml  requirements.txt  runnable.py  sequence_runnable.py  temp.md
